--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9090
 server.error.whitelabel.enabled=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/eprintdb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/eprint3d?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=   
 
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=false
 # ddl-auto = create, create-drop, update, none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
 
