--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=false
 # ddl-auto = create, create-drop, update, none
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 
