--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.jpa.open-in-view=false
 
 spring.jpa.show-sql=true
 
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 # ddl-auto = create, create-drop, update, none
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.properties.hibernate.format_sql=true
 
