--- a/front/Front3DePrint/package.json
+++ b/front/Front3DePrint/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^2.2.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
+    "three": "^0.121.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
