--- a/front/Front3DePrint/package.json
+++ b/front/Front3DePrint/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-stl-model-viewer": "^2.0.0",
     "angular2-jwt": "^0.2.3",
     "hammerjs": "^2.0.8",
     "jw-angular-pagination": "^1.2.0",
