--- a/front/Front3DePrint/tsconfig.json
+++ b/front/Front3DePrint/tsconfig.json
@@ -13,6 +13,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
+    "skipLibCheck": true, /// Needs to be true to fix wrong alias types being used
     "typeRoots": [
       "node_modules/@types"
     ],
