in progress download in directory

--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -7,16 +7,25 @@ spring.datasource.password=
 
 spring.jpa.open-in-view=false
 
-spring.jpa.show-sql=true
+##### generate base by ddl/dml
+# spring.datasource.schema=classpath:schema.ddl
+# spring.datasource.data=classpath:data.dml
+# spring.datasource.continue-on-error=true
 
+### always/never
+# spring.datasource.initialization-mode=always
+
+##### generate base by ORM
 spring.jpa.generate-ddl=true
 # ddl-auto = create, create-drop, update, none
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.format_sql=true
 
 # spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+###### SQL log config:
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 ######################### JWT properties:
 # See keystore-key-generation.txt
