create personal dir works

--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.open-in-view=false
 # spring.datasource.initialization-mode=always
 
 ##### generate base by ORM
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 # ddl-auto = create, create-drop, update, none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 # spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -33,9 +33,15 @@ spring.jpa.properties.hibernate.format_sql=true
 3deprint.keyPass=123456
 3deprint.keyAlias=jwt
 
-
+# TTL of validity #
 3deprint.accessTokenValiditySeconds=720000
 3deprint.refreshTokenValiditySeconds=86400
+
+
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
 
 # Define the maximum file size that can be uploaded
 # 
