--- a/back/3deprint/pom.xml
+++ b/back/3deprint/pom.xml
@@ -44,6 +44,11 @@
 			<version>5.2.4.Final</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.0</version>
