update image in progress

--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -53,3 +53,6 @@ spring.servlet.multipart.max-request-size=10MB
 
 #CrossOrigin allowed
 3deprint.allowedOrigin=http://localhost:4200
+
+######### Custom banner
+spring.banner.location=classpath:banner-project.txt
