--- a/front/Front3DePrint/package.json
+++ b/front/Front3DePrint/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "angular-stl-model-viewer": "^2.0.0",
     "angular2-jwt": "^0.2.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jw-angular-pagination": "^1.2.0",
     "jw-paginate": "^1.0.4",
