--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.open-in-view=false
 # spring.datasource.initialization-mode=always
 
 ##### generate base by ORM
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 # ddl-auto = create, create-drop, update, none
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 # spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
