--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -29,9 +29,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 ######################### JWT properties:
 # See keystore-key-generation.txt
-3deprint.keyStore=jwt.jks
-3deprint.keyPass=123456
-3deprint.keyAlias=jwt
+#3deprint.keyStore=jwt.jks
+#3deprint.keyPass=123456
+#3deprint.keyAlias=jwt
+3deprint.keyStore=3deprintjwt.jks
+3deprint.keyPass=1a2b3c4d
+3deprint.keyAlias=3deprint
 
 # TTL of validity #
 3deprint.accessTokenValiditySeconds=720000
