jwt ajout jks perso

--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #3deprint.keyAlias=jwt
 3deprint.keyStore=3deprintjwt.jks
 3deprint.keyPass=1a2b3c4d
-3deprint.keyAlias=3deprint
+3deprint.keyAlias=3deprintalias
 
 # TTL of validity #
 3deprint.accessTokenValiditySeconds=720000
