--- a/front/Front3DePrint/package.json
+++ b/front/Front3DePrint/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~8.2.9",
     "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~8.2.9",
@@ -24,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "angular-stl-model-viewer": "^2.0.0",
     "angular2-jwt": "^0.2.3",
+    "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jw-angular-pagination": "^1.2.0",
@@ -31,7 +33,7 @@
     "jwt-decode": "^2.2.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.4.0",
-    "three": "^0.121.1",
+    "three": "^0.126.1",
     "three-orbitcontrols": "^2.110.3",
     "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^1.10.0",
@@ -56,7 +58,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.4.5"
   },
   "permissions": [
     "http://localhost:9090/"
