--- a/front/Front3DePrint/package.json
+++ b/front/Front3DePrint/package.json
@@ -18,15 +18,18 @@
     "@angular/core": "~12.0.0-next.5",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~12.0.0-next.5",
+    "@angular/localize": "^9.1.13",
     "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~12.0.0-next.5",
     "@angular/platform-browser-dynamic": "~12.0.0-next.5",
     "@angular/router": "~12.0.0-next.5",
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "angular-stl-model-viewer": "^2.0.0",
     "angular2-jwt": "^0.2.3",
-    "bootstrap": "^5.0.0-beta2",
+    "bootstrap": "^5.0.0-beta3",
     "font-awesome": "^4.7.0",
+    "hamburgers": "^1.1.3",
     "hammerjs": "^2.0.8",
     "jw-angular-pagination": "^1.2.0",
     "jw-paginate": "^1.0.4",
