cleaning in progress

--- a/back/3deprint/src/main/resources/application.properties
+++ b/back/3deprint/src/main/resources/application.properties
@@ -38,7 +38,7 @@ spring.jpa.properties.hibernate.format_sql=true
 3deprint.refreshTokenValiditySeconds=86400
 
 #set path to create local uploads
- 3deprint.path= Paths.get("H:\\RNCPProject\\front\\Front3DePrint\\src\\assets\\uploads")
+ 3deprint.myAppPath="H:\\RNCPProject\\front\\Front3DePrint\\src\\assets"
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
